examples/test/testpolicy7163.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7163
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key12: value24
      key16: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value18
      podSelector:
        matchLabels:
          key6: value9
          key49: value40
          key47: value21
